# FastAPI-Project

./: .env  .env.dev  .gitmessage.txt  README.md  docker-compose.yml  poetry.lock.bak  pyproject.toml
app/: main.py
app/api/v1/: auth.py  diary.py  question.py  quote.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  migrations.py
app/models/: __init__.py  bookmark.py  diary.py  question.py  quote.py  token_blacklist.py  user.py  user_question.py
app/repositories/: diary_repo.py  question_repo.py  quote_repo.py  token_repo.py  user_repo.py
app/schemas/: diary.py  question.py  quote.py  user.py
app/scraping/: question_scraper.py  quote_scraper.py
app/services/: auth_service.py  diary_service.py  question_service.py  quote_service.py
app/templates/: auth.html  diaries.html  index.html
migrations/models/: 0_20251028114027_init.py  1_20251029180842_update.py
tests/: test_diary.py
