[tool.poetry]
name = "fastapi-mini-project"
version = "0.1.0"
description = ""
authors = ["kihoon <nike6736@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
pydantic-settings = "^2.11.0"
tortoise-orm = "^0.25.1"
aerich = "^0.9.2"
asyncpg = "^0.30.0"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
selenium = "^4.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.aerich]

tortoise_orm = "app.db.migrations.TORTOISE_ORM"

location = "./migrations"

src_folder = "./."

