[tool.poetry]
name = "fastapi-mini-project"
version = "0.1.0"
description = ""
authors = ["kihoon <nike6736@naver.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
pydantic-settings = "^2.11.0"
tortoise-orm = "^0.25.1"
aerich = "^0.9.2"
asyncpg = "^0.30.0"
playwright = "^1.55.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.2"
selenium = "^4.38.0"
jinja2 = "^3.1.6"
lxml = "^6.0.2"
python-jose = "^3.5.0"
passlib = "^1.7.4"
bcrypt = "^3.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.aerich]

tortoise_orm = "app.db.migrations.TORTOISE_ORM"

location = "./migrations"

src_folder = "./."



